# SOCIP_Scenario_DB2

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  README_ubuntu.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_write_api_variant_overlay.py  0003_derived_variant_overlay.py
dashboard/: Home.py
dashboard/components/: cytoscape_viewer.py  elk_viewer.py  explorer_api_client.py  import_api_client.py  lane_layout.py  node_detail_panel.py  viewer_api_client.py  viewer_theme.py
dashboard/pages/: 1_DB_Explorer.py  1_Pipeline_Viewer.py  2_Import_Workbench.py
db_fixtures_Exynos2600_S26Plus/: import_bundle.json  import_report.json
db_fixtures_Exynos2600_S26Plus/00_hw/: ip-apv-s5e9965.yaml  ip-cpu-s5e9965.yaml  ip-csis-s5e9965.yaml  ip-display-panel-s5e9965.yaml  ip-dpu-s5e9965.yaml  ip-gpu-s5e9965.yaml  ip-isp-s5e9965.yaml  ip-lme-s5e9965.yaml  ip-mcsc-s5e9965.yaml  ip-mfc-s5e9965.yaml  ip-npu-s5e9965.yaml  ip-sensor-front-s5e9965.yaml  ip-sensor-rear-s5e9965.yaml  soc-exynos2600.yaml
db_fixtures_Exynos2600_S26Plus/01_sw/: sw-vendor-v1.2.3.yaml
db_fixtures_Exynos2600_S26Plus/02_definition/: proj-sm-s947b.yaml  uc-audio-mp3-playback.yaml  uc-audio-streaming.yaml  uc-camera-capture.yaml  (+10 more)
docs/: api-reference.md  import-workbench-plan.md  internal-data-import-guide.md  legacy-scenario-grouping-policy.md  legacy-yaml-import-plan.md  read-api-contract.md  testing.md  write-api-contract.md  write-api-runbook.md
scripts/: bench_matcher.py
tests/: conftest.py
(+160 files in other folders)
